ログイン機能途中２

--- a/src/main/resources/message.properties
+++ b/src/main/resources/message.properties
@@ -6,7 +6,7 @@ customer.detail.title = detail
 customer.create.title = Create
 customer.edit.title = Edit
 customer.save.title = Save
-customer.delete.title = delete
+customer.delete.title = Delete
 customer.search.title = Search
 
 #field label
